--- a/services.html
+++ b/services.html
@@ -249,26 +249,50 @@
     </div>
 
     <div id="modal12" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal12')">&times;</span>
-            <h2>Online OBRS Company/ business Regiustration/ Deregistration</h2>
-            <p></p>
-        </div>
+    <div class="modal-content">
+        <span class="close" onclick="closeModal('modal12')">&times;</span>
+        <h2>Online OBRS Company/Business Registration/Deregistration</h2>
+        <p>The Online Business Registration System (OBRS) allows businesses to register or deregister through an online platform provided by government agencies.</p>
+        <h3>Registration Process:</h3>
+        <ul>
+            <li><strong>Purpose:</strong> To legally establish a business entity within a jurisdiction.</li>
+        </ul>
+        <h3>Benefits of Online OBRS:</h3>
+        <ul>
+            <li><strong>Convenience & Efficiency:</strong> Allows businesses to complete registration/deregistration from anywhere at any time without needing physical visits to government offices.</li>
+            <li><strong>Real-Time Processing & Updates:</strong> Immediate feedback on application status and updates on requirements or issues encountered during processing.</li>
+        </ul>
+        <p>We therefore help companies with Online OBRS Company/Business Registration/Deregistration.</p>
     </div>
+</div>
 
-    <div id="modal13" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal13')">&times;</span>
-            <h2>Annual Return Payments</h2>
-            <p></p>
-        </div>
+   <div id="modal13" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal('modal13')">&times;</span>
+        <h2>Annual Return Payments</h2>
+        <p>Annual return payments refer to the fees and documentation that companies must submit to regulatory authorities, typically on a yearly basis, to maintain their legal status and compliance.</p>
+        <h3>Key Aspects:</h3>
+        <ul>
+            <li><strong>Purpose:</strong> To provide updated information about the company’s structure, financial status, and operations. This ensures transparency and accountability.</li>
+            <li><strong>Contents:</strong> Usually includes details such as company name, registration number, registered office address, directors' information, shareholder details, and financial statements.</li>
+            <li><strong>Regulatory Bodies:</strong> In many jurisdictions, this is managed by a government agency.</li>
+            <li><strong>Filing Deadlines:</strong> Companies must adhere to specific deadlines for submission; failure to do so can result in penalties or loss of good standing.</li>
+            <li><strong>Payment Structure:</strong> Fees vary based on company size or type (e.g., private vs. public) and may increase with late submissions.</li>
+        </ul>
     </div>
+</div>
 
     <div id="modal14" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal14')">&times;</span>
             <h2>Director/Shareholder changes</h2>
-            <p></p>
+            <p>We manage all aspects related to changes in directors or shareholders within a company structure.
+                This includes resignations, appointments, or transfers of shares among existing shareholders or 
+                new investors joining the company.</p>
+            <p>Our team ensures that all necessary documentation is prepared accurately—such as board resolutions, consent
+                forms from new directors/shareholders, and updated registers—while adhering to legal requirements set forth by 
+                regulatory authorities. We also handle filings with relevant government bodies to officially record these changes, ensuring 
+                that our clients remain compliant with corporate laws while minimizing disruption to their operations.</p>
         </div>
     </div>
 
@@ -276,7 +300,12 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal15')">&times;</span>
             <h2>Appointment Of Company Secretary</h2>
-            <p></p>
+            <p>We offer comprehensive services for appointing a company secretary, which is a legal requirement for many businesses. 
+                Our role includes advising on the qualifications needed for this position and identifying suitable candidates who possess 
+                the necessary expertise in corporate governance.</p>
+            <p>Once a candidate is selected, we assist with formalizing their appointment through board resolutions and updating statutory
+                registers accordingly. We also provide ongoing support by ensuring compliance with regulatory obligations, 
+                such as filing annual returns and maintaining proper records of meetings and decisions made by directors.</p>
         </div>
     </div>
 
@@ -284,7 +313,12 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal16')">&times;</span>
             <h2>Share Certificates and Allocation</h2>
-            <p></p>
+            <p>We facilitate the issuance of share certificates to document ownership in a company. This process involves 
+                determining the appropriate number of shares to be allocated based on shareholder agreements or company bylaws.
+                We assist in drafting resolutions for share allocation and ensure compliance with relevant regulations.</p>
+            <p>We prepare share certificates that include essential details such as shareholder names, number of shares held,
+                and unique certificate numbers. We also maintain accurate records in the company's register of members to reflect these allocations accurately.
+                Additionally, we provide advice on any implications related to share transfers or changes in ownership.</p>
         </div>
     </div>
 
@@ -292,7 +326,12 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal17')">&times;</span>
             <h2>Bank Account Opening for Company</h2>
-            <p></p>
+            <p>We assist businesses in establishing a corporate bank account, which is essential for managing finances and facilitating transactions. 
+                Our process begins with understanding the specific banking needs of the company. We guide clients through the selection of a suitable 
+                bank that aligns with their operational requirements and offers favorable terms. </p>
+            <p>We prepare and compile all necessary documentation, including company registration documents, identification for directors and shareholders,
+                and any additional paperwork required by the bank. Our team coordinates with the bank to ensure a smooth application process, addressing any queries or concerns that may arise. 
+                Once the account is opened, we provide guidance on best practices for managing corporate finances.</p>
         </div>
     </div>
 
