--- a/about.html
+++ b/about.html
@@ -196,6 +196,29 @@
                 </td>
                 <td>2019 to date</td>
             </tr>
+            <tr>
+                <td>
+                    <strong>SMEI Projects Pty Ltd</strong><br>
+                    143 Lily Van Niekerk Road, Gauteng South Africa
+                </td>
+                <td>2020-2022</td>
+            </tr>
+            <tr>
+                <td>
+                    <strong>Redpath Botswana Pty Ltd</strong><br>
+                    CBD Floor 2<br>
+                    Joshua Baxter
+                </td>
+                <td>2024 - present</td>
+            </tr>
+            <tr>
+                <td>
+                    <strong>Debeers Group</strong><br>
+                    Cornerstone Building Cnr, South Dale 2135, South Africa<br>
+                    Vincent Kubyana
+                </td>
+                <td>2019-2023</td>
+            </tr>
         </table>
     </div>
 
