--- a/services.html
+++ b/services.html
@@ -358,7 +358,7 @@
     <div id="modal20" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal20')">&times;</span>
-            <h2>Tax Clearance Appliacation</h2>
+            <h2>Tax Clearance Application</h2>
             <p> We assist clients in obtaining tax clearance certificates, which are essential for various business transactions and compliance requirements.
                 This service includes reviewing tax obligations, ensuring all filings are up-to-date, and preparing the necessary paperwork for submission to the tax authorities. 
                 Our aim to streamline this process so that clients can focus on their core activities without worrying about tax compliance issues.</p>
