--- a/services.html
+++ b/services.html
@@ -143,7 +143,7 @@
     <div class="service"><h2>16. Share Certificates and Allocation</h2><span class="read-more" onclick="openModal('modal16')">Read More</span></div>
     <div class="service"><h2>17. Bank Account Opening for Company/BUsiness</h2><span class="read-more" onclick="openModal('modal17')">Read More</span></div>
     <div class="service"><h2>18. Bookkeeping/Account for clients</h2><span class="read-more" onclick="openModal('modal18')">Read More</span></div>
-    <div class="service"><h2>19. Financila Work/ Accounts for tax payments</h2><span class="read-more" onclick="openModal('modal19')">Read More</span></div>
+    <div class="service"><h2>19. Financial Work/ Accounts for tax payments</h2><span class="read-more" onclick="openModal('modal19')">Read More</span></div>
     <div class="service"><h2>20. Tax Clearance Application</h2><span class="read-more" onclick="openModal('modal20')">Read More</span></div>
     <div class="service"><h2>21. Assistance for loans/grants at CEDA, Gender Affairs etc</h2><span class="read-more" onclick="openModal('modal21')">Read More</span></div>
 
