--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
     <div class="contact-info">
         <p>Get in touch with us through the following platforms by just one click:</p>
         <div class="contact-icons">
-            <a href="tel:267 75508168" target="_blank">
+            <a href="https://wa.me/+267 75508168" target="_blank">
                 <img src="WhatsApp Icon.webp" alt="WhatsApp">
                 WhatsApp
             </a>
