--- a/services.html
+++ b/services.html
@@ -146,7 +146,7 @@
     <div class="service"><h2>19. Financial Work/ Accounts for tax payments</h2><span class="read-more" onclick="openModal('modal19')">Read More</span></div>
     <div class="service"><h2>20. Tax Clearance Application</h2><span class="read-more" onclick="openModal('modal20')">Read More</span></div>
     <div class="service"><h2>21. Assistance for loans/grants at CEDA, Gender Affairs etc</h2><span class="read-more" onclick="openModal('modal21')">Read More</span></div>
-     <div class="service"><h2>22.Botswana Health Practicing Counsil</h2><span class="read-more" onclick="openModal('modal22')">Read More</span></div>
+     <div class="service"><h2>22.Botswana Health Practicing Council</h2><span class="read-more" onclick="openModal('modal22')">Read More</span></div>
 
     <!-- Modals for each service -->
     <div id="modal1" class="modal">
@@ -366,9 +366,9 @@
         </div>
     </div>
 
-    <div id="modal20" class="modal">
+    <div id="modal21" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('modal20')">&times;</span>
+            <span class="close" onclick="closeModal('modal21')">&times;</span>
             <h2>Assistance for loans/grants at CEDA, Gender Affairs etc</h2>
             <p>   We provide comprehensive support in navigating the application processes for loans and grants from organizations like CEDA (Citizen Entrepreneurial Development Agency) and Gender Affairs. 
                 This includes assessing eligibility, preparing necessary documentation, crafting compelling proposals, and guiding clients through each step to ensure a smooth submission. 
@@ -376,9 +376,9 @@
         </div>
     </div>
 
-     <div id="modal20" class="modal">
+     <div id="modal22" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('modal20')">&times;</span>
+            <span class="close" onclick="closeModal('modal22')">&times;</span>
             <h2>Botswana Practicing Council</h2>
             <p>For all applicants working in the health profession they must have registered and been approved by the council.</p>
             <P>We act as an intermediary, submitting applications, following up with the council, or addressing queries on behalf of applicants.</P>
