--- a/services.html
+++ b/services.html
@@ -153,23 +153,23 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal1')">&times;</span>
             <h2>Application For Citizenship</h2>
-            <p>This is for people who have resided in Botswana for the past ten years with no break. for example, having ten residential and work permits for the previous
-            years and would like to become citizens of Botswana.</p>
+            <p>This is for people who have resided in Botswana for the past ten years with no break. for example, having residential permits/work permits and work permits spending
+                over five years.</p>
         </div>
     </div>
 
     <div id="modal2" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal2')">&times;</span>
-            <h2>Permanent residence</h2>
-            <p>This is also for those who have resided in a traceable ten years in Botswana without a break(continously staying in Botswana).</p></p>
+            <h2>Permanent residence Application</h2>
+            <p>This is also for those who have resided more than five years in Botswana without a break(continously staying in Botswana).</p></p>
         </div>
     </div>
 
     <div id="modal3" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal3')">&times;</span>
-            <h2>Short Term Permits</h2>
+            <h2>Short Term Permits Application</h2>
             <p>Commonly Known as emergency work permits and they range from:</p>
             <p>*One(1) day to fourteen(14) days.</p>
             <p>*14 days to three months respectively.</p>
@@ -179,7 +179,7 @@
     <div id="modal4" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal4')">&times;</span>
-            <h2>Long Term Permits</h2>
+            <h2>Long Term Permits Application</h2>
             <p>This permits duration is from four(4) months to five(5) years.</p>
             <p>It's for people who are foreigners and have been employed by a local company  or their
             companies bringing them for seccondment in Botswana.</p>
@@ -198,7 +198,7 @@
     <div id="modal6" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal6')">&times;</span>
-            <h2>VISAS</h2>
+            <h2>VISAS Application</h2>
             <p>We apply for VISAS for all applicants who come from countries that are required to come in using VISAS.</p>
         </div>
     </div>
@@ -206,7 +206,7 @@
     <div id="modal7" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal7')">&times;</span>
-            <h2>Waivers Issuing</h2>
+            <h2>Waivers Application</h2>
             <p>We assist in the issuance of waivers for various permits and compliance requirements.</p>
             <p>Waivers are legal documents given to all people who qualify and are approved to be covered by a resident document or they
             get it to tally it with a work permit for stay in Botswana.</p>
@@ -216,7 +216,7 @@
     <div id="modal8" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal8')">&times;</span>
-            <h2>Labour Hire</h2>
+            <h2>Labour Hire Services</h2>
             <p>We assist with the hiring of employees/workers on behalf of companies and handle all human resource function on behalf of your company.</p>
         </div>
     </div>
@@ -224,7 +224,7 @@
     <div id="modal9" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal9')">&times;</span>
-            <h2>Engineering Registration Board(ERB)</h2>
+            <h2>Engineering Registration Board(ERB) Applications</h2>
             <p>We assist with registration of all diploma, degree and Masters Degree Engineers with this organization for
             for one to practice their trade in Botswana as an engineer.</p></p>
         </div>
@@ -233,8 +233,8 @@
     <div id="modal10" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal10')">&times;</span>
-            <h2>Transportation</h2>
-            <p>We provide transportation for workers to and from work for companies.</p>
+            <h2>Transportation Services</h2>
+            <p>We provide transportation services for organizations for their employees to and from work.</p>
         </div>
     </div>
 
@@ -243,7 +243,7 @@
             <span class="close" onclick="closeModal('modal11')">&times;</span>
             <h2>Botswana Qualification Authority(BQA)</h2>
             <p>We assist in the evaluation of certificates for immigrants and people
-            looking forward to work in Botswana and studied abroad.</p>
+            looking forward to work in Botswana and studied abroad to get their qualifications verified.</p>
             <p>BQA iS responsible for assessing all the applicants qualifications and
             approving them so that applicants are then allowed to proceed with ERB application which is requirement for permit applications.</p>
         </div>
@@ -339,7 +339,7 @@
     <div id="modal18" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal18')">&times;</span>
-            <h2>Bookkeeping/ Account for cliens</h2>
+            <h2>Bookkeeping/ Account for clients</h2>
             <p>Our bookkeeping services are designed to help clients maintain accurate financial records effortlessly. 
                 We manage day-to-day transactions, reconcile bank statements, and prepare financial reports that provide insights into their business performance.
                 By keeping their accounts organized and up-to-date, we enable clients to make informed decisions while saving them time and reducing stress associated with financial management.</p>
