--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
             </a>
             <a href="precious.mbulawa@gmail.com">
                 <img src="Email icon.png" alt="Email">
-                Email
+                precious.mbulawa@gmail.com
             </a>
         </div>
     </div>
