--- a/services.html
+++ b/services.html
@@ -153,8 +153,9 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal1')">&times;</span>
             <h2>Application For Citizenship</h2>
-            <p>This is for people who have resided in Botswana for the past ten years with no break. for example, having residential permits/work permits and work permits spending
+            <p>This is for people who have resided in Botswana for the past five years with no break. for example, having residential permits/work permits and work permits spending
                 over five years.</p>
+            <p>Governmnet fee : P1000.00</p>
         </div>
     </div>
 
@@ -163,6 +164,7 @@
             <span class="close" onclick="closeModal('modal2')">&times;</span>
             <h2>Permanent residence Application</h2>
             <p>This is also for those who have resided more than five years in Botswana without a break(continously staying in Botswana).</p></p>
+            <p>Government fee:P4500.00</p>
         </div>
     </div>
 
@@ -170,9 +172,12 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal3')">&times;</span>
             <h2>Short Term Permits Application</h2>
-            <p>Commonly Known as emergency work permits and they range from:</p>
+            <p>Commonly Known as emergency work permits used to for employees to come to the country to work as soon as possible and can be used as
+                temporary permit whilst the long term work permit is in process and they range from:</p>
             <p>*One(1) day to fourteen(14) days.</p>
+            <p>No Government fee required</p>
             <p>*14 days to three months respectively.</p>
+            <p>Goverment fee = P1500.00</p>
         </div>
     </div>
 
@@ -183,6 +188,9 @@
             <p>This permits duration is from four(4) months to five(5) years.</p>
             <p>It's for people who are foreigners and have been employed by a local company  or their
             companies bringing them for seccondment in Botswana.</p>
+            <h3> Government fee :  Labour: P1500.00(</h3>
+            <p>a. Labour : P1500.00</p>
+            <p>b.Immigration : P1500.00</p>
         </div>
     </div>
 
@@ -192,6 +200,7 @@
             <h2>Exemptions Applications</h2>
             <p>They are positions of work which are exempted from permit application process e.g some investors
             are exempted, so we assist in exemption applications. </p>
+            <p> Government fee: P2500.00</p>
         </div>
     </div>
 
@@ -200,6 +209,7 @@
             <span class="close" onclick="closeModal('modal6')">&times;</span>
             <h2>VISAS Application</h2>
             <p>We apply for VISAS for all applicants who come from countries that are required to come in using VISAS.</p>
+            <p> Government fee: P1000.00</p>
         </div>
     </div>
 
@@ -227,6 +237,9 @@
             <h2>Engineering Registration Board(ERB) Applications</h2>
             <p>We assist with registration of all diploma, degree and Masters Degree Engineers with this organization for
             for one to practice their trade in Botswana as an engineer.</p></p>
+            <p> Government application fee: P 7500.00</p>
+            <p> Certificate fee: P2500.00</p>
+            <p> Renewal fee: P2500.00</p>
         </div>
     </div>
 
@@ -246,6 +259,7 @@
             looking forward to work in Botswana and studied abroad to get their qualifications verified.</p>
             <p>BQA iS responsible for assessing all the applicants qualifications and
             approving them so that applicants are then allowed to proceed with ERB application which is requirement for permit applications.</p>
+            <p> Government fee : P2000.00</p>
         </div>
     </div>
 
