--- a/services.html
+++ b/services.html
@@ -126,16 +126,16 @@
 
     <!-- Services -->
     <div class="service"><h2>1. Citizenship Application</h2><span class="read-more" onclick="openModal('modal1')">Read More</span></div>
-    <div class="service"><h2>2. Permanent Residence</h2><span class="read-more" onclick="openModal('modal2')">Read More</span></div>
-    <div class="service"><h2>3. Short Term Permits</h2><span class="read-more" onclick="openModal('modal3')">Read More</span></div>
-    <div class="service"><h2>4. Long Term Permits</h2><span class="read-more" onclick="openModal('modal4')">Read More</span></div>
+    <div class="service"><h2>2. Permanent Residence Application</h2><span class="read-more" onclick="openModal('modal2')">Read More</span></div>
+    <div class="service"><h2>3. Short Term Permits Services</h2><span class="read-more" onclick="openModal('modal3')">Read More</span></div>
+    <div class="service"><h2>4. Long Term Permits Services</h2><span class="read-more" onclick="openModal('modal4')">Read More</span></div>
     <div class="service"><h2>5. Exemptions Application</h2><span class="read-more" onclick="openModal('modal5')">Read More</span></div>
-    <div class="service"><h2>6. VISAS</h2><span class="read-more" onclick="openModal('modal6')">Read More</span></div>
-    <div class="service"><h2>7. Waivers Issuing</h2><span class="read-more" onclick="openModal('modal7')">Read More</span></div>
+    <div class="service"><h2>6. VISAS Application</h2><span class="read-more" onclick="openModal('modal6')">Read More</span></div>
+    <div class="service"><h2>7. Waivers Application</h2><span class="read-more" onclick="openModal('modal7')">Read More</span></div>
     <div class="service"><h2>8. Labour Hire</h2><span class="read-more" onclick="openModal('modal8')">Read More</span></div>
-    <div class="service"><h2>9. Engineering Registration Board(ERB)</h2><span class="read-more" onclick="openModal('modal9')">Read More</span></div>
-    <div class="service"><h2>10. Transportation</h2><span class="read-more" onclick="openModal('modal10')">Read More</span></div>
-    <div class="service"><h2>11. Botswana Qualification Authority</h2><span class="read-more" onclick="openModal('modal11')">Read More</span></div>
+    <div class="service"><h2>9. Engineering Registration Board(ERB) Services</h2><span class="read-more" onclick="openModal('modal9')">Read More</span></div>
+    <div class="service"><h2>10. Transportation Services</h2><span class="read-more" onclick="openModal('modal10')">Read More</span></div>
+    <div class="service"><h2>11. Botswana Qualification Authority(BQA) Verification Services</h2><span class="read-more" onclick="openModal('modal11')">Read More</span></div>
     <div class="service"><h2>12. Online OBRS Company/Business Registration/Deregistration</h2><span class="read-more" onclick="openModal('modal12')">Read More</span></div>
     <div class="service"><h2>13. Annual Return Payments</h2><span class="read-more" onclick="openModal('modal13')">Read More</span></div>
     <div class="service"><h2>14. Direct Shareholder Changes</h2><span class="read-more" onclick="openModal('modal14')">Read More</span></div>
