--- a/services.html
+++ b/services.html
@@ -127,8 +127,8 @@
     <!-- Services -->
     <div class="service"><h2>1. Citizenship Application</h2><span class="read-more" onclick="openModal('modal1')">Read More</span></div>
     <div class="service"><h2>2. Permanent Residence Application</h2><span class="read-more" onclick="openModal('modal2')">Read More</span></div>
-    <div class="service"><h2>3. Short Term Permits Services</h2><span class="read-more" onclick="openModal('modal3')">Read More</span></div>
-    <div class="service"><h2>4. Long Term Permits Services</h2><span class="read-more" onclick="openModal('modal4')">Read More</span></div>
+    <div class="service"><h2>3. Short Term Permits Application</h2><span class="read-more" onclick="openModal('modal3')">Read More</span></div>
+    <div class="service"><h2>4. Long Term Permits Application</h2><span class="read-more" onclick="openModal('modal4')">Read More</span></div>
     <div class="service"><h2>5. Exemptions Application</h2><span class="read-more" onclick="openModal('modal5')">Read More</span></div>
     <div class="service"><h2>6. VISAS Application</h2><span class="read-more" onclick="openModal('modal6')">Read More</span></div>
     <div class="service"><h2>7. Waivers Application</h2><span class="read-more" onclick="openModal('modal7')">Read More</span></div>
@@ -155,7 +155,7 @@
             <h2>Application For Citizenship</h2>
             <p>This is for people who have resided in Botswana for the past five years with no break. for example, having residential permits/work permits and work permits spending
                 over five years.</p>
-            <p>Governmnet fee : P1000.00</p>
+            <p>Government fee : P1000.00</p>
         </div>
     </div>
 
@@ -177,7 +177,7 @@
             <p>*One(1) day to fourteen(14) days.</p>
             <p>No Government fee required</p>
             <p>*14 days to three months respectively.</p>
-            <p>Goverment fee = P1500.00</p>
+            <p>Government fee = P1500.00</p>
         </div>
     </div>
 
