--- a/contact.html
+++ b/contact.html
@@ -149,11 +149,11 @@
             <a href="https://www.facebook.com/share/w7GxXPA8UUH3h5Nx/" target="_blank">
                 <img src="Facebook icon.jpg" alt="Facebook">
                 Facebook
-            </a>
-            <a href="precious.mbulawa@gmail.com">
+            <a href="mailto:precious.mbulawa@gmail.com">
                 <img src="Email icon.png" alt="Email">
                 precious.mbulawa@gmail.com
-            </a>
+             </a>
+
         </div>
     </div>
 
